return 404 on class not found